--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "prepublishOnly": "yarn build",
     "build": "rollup -c",
     "watch": "rollup -c -w",
-    "format": "prettier --write './src/**/*.js'",
+    "format": "prettier --write './src/**/*.ts'",
     "publish-pages": "git subtree push --prefix pages/dist origin gh-pages"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.35",
     "@babel/preset-env": "^7.0.0-beta.35",
+    "@rollup/plugin-typescript": "^8.1.0",
+    "@types/prosemirror-state": "^1.2.5",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^22.0.1",
     "eslint": "^4.13.1",
@@ -28,7 +30,7 @@
     "eslint-plugin-prettier": "^2.4.0",
     "http-server": "^0.10.0",
     "jest": "^22.0.1",
-    "prettier": "^1.9.2",
+    "prettier": "^2.2.1",
     "prosemirror-example-setup": "^1.0.1",
     "prosemirror-history": "^1.0.0",
     "prosemirror-keymap": "^1.0.0",
@@ -36,12 +38,12 @@
     "prosemirror-model": "^1.0.1",
     "prosemirror-schema-basic": "^1.0.0",
     "prosemirror-test-builder": "^1.0.0",
-    "rollup": "^0.52.3",
-    "rollup-plugin-babel": "^4.0.0-beta.4",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-eslint": "^4.0.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-scss": "^0.4.0"
+    "rollup": "^2.35.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-scss": "^2.6.1",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "prosemirror-view": "^1.5.1"
