Fix linting config for TS

--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.35",
     "@babel/preset-env": "^7.0.0-beta.35",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-typescript": "^8.1.0",
     "@types/prosemirror-state": "^1.2.5",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^22.0.1",
-    "eslint": "^4.13.1",
+    "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.4.0",
     "http-server": "^0.10.0",
@@ -39,8 +45,6 @@
     "prosemirror-schema-basic": "^1.0.0",
     "prosemirror-test-builder": "^1.0.0",
     "rollup": "^2.35.1",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-scss": "^2.6.1",
     "typescript": "^4.1.3"
