--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "include": ["src/ts"],
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
+    "rootDir": "src/ts",
+    "lib": ["DOM"],
+    "target": "es6",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
