--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@guardian/prosemirror-invisibles",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A plugin to show invisibles in prosemirror",
   "main": "dist/invisibles.js",
   "license": "MIT",
@@ -53,7 +53,9 @@
     "prosemirror-view": "^1.5.1"
   },
   "jest": {
-    "modulePaths": ["<rootDir>/src/ts"],
+    "modulePaths": [
+      "<rootDir>/src/ts"
+    ],
     "preset": "ts-jest",
     "testEnvironment": "jsDom"
   }
