--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.2",
   "description": "A plugin to show invisibles in prosemirror",
   "main": "dist/invisibles.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "author": {
     "name": "Richard Beddington",
