fix: Use correct default branch name

--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,10 +1,9 @@
-# This action runs snyk monitor on every push to main
 name: Snyk
 
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
