--- a/package.json
+++ b/package.json
@@ -2,55 +2,54 @@
   "name": "@guardian/prosemirror-invisibles",
   "version": "1.3.1",
   "description": "A plugin to show invisibles in prosemirror",
-  "main": "dist/invisibles.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
   "license": "MIT",
   "author": {
     "name": "Richard Beddington",
     "email": "richard.beddington@guardian.co.uk"
   },
   "scripts": {
+    "watch": "run-p watch:*",
+    "watch:serve": "vite",
+    "watch:typecheck": "tsc --noEmit --watch",
+    "build": "vite build && tsc -p tsconfig.declaration.json",
     "test": "NODE_ENV=test jest test 'test/*.spec.js'",
     "pages": "npm run build && http-server ./pages/dist",
     "prepublishOnly": "yarn build",
-    "build": "rollup -c",
-    "watch": "rollup -c -w",
     "format": "prettier --write './src/**/*.ts'",
     "publish-pages": "git subtree push --prefix pages/dist origin gh-pages"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.35",
-    "@babel/preset-env": "^7.0.0-beta.35",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-eslint": "^8.0.1",
-    "@rollup/plugin-node-resolve": "^11.0.1",
     "@types/jest": "^26.0.19",
+    "@types/prosemirror-dev-tools": "^3.0.2",
     "@types/prosemirror-state": "^1.2.5",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
-    "babel-core": "^7.0.0-0",
-    "babel-jest": "^22.0.1",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^2.4.0",
     "http-server": "^0.10.0",
     "jest": "^26.6.3",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.16",
     "prettier": "^2.2.1",
-    "prosemirror-example-setup": "^1.0.1",
-    "prosemirror-history": "^1.0.0",
-    "prosemirror-keymap": "^1.0.0",
-    "prosemirror-menu": "^1.0.1",
-    "prosemirror-model": "^1.0.1",
-    "prosemirror-schema-basic": "^1.0.0",
-    "prosemirror-test-builder": "^1.0.0",
-    "rollup": "^2.35.1",
-    "rollup-plugin-scss": "^2.6.1",
-    "rollup-plugin-typescript2": "^0.29.0",
+    "prosemirror-dev-tools": "^3.1.0",
+    "prosemirror-example-setup": "1.2.1",
+    "prosemirror-history": "1.3.0",
+    "prosemirror-keymap": "1.2.0",
+    "prosemirror-menu": "1.2.1",
+    "prosemirror-model": "1.18.1",
+    "prosemirror-schema-basic": "1.2.0",
+    "prosemirror-test-builder": "1.1.0",
+    "prosemirror-view": "1.28.1",
+    "react": "17",
+    "react-dom": "17",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
-  },
-  "dependencies": {
-    "prosemirror-view": "^1.5.1"
+    "typescript": "4.8.3",
+    "vite": "^2.9.13",
+    "vite-tsconfig-paths": "^3.5.0"
   },
   "jest": {
     "modulePaths": [
@@ -58,5 +57,8 @@
     ],
     "preset": "ts-jest",
     "testEnvironment": "jsDom"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react": "1.3.2"
   }
 }
