--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watch": "run-p watch:*",
     "watch:serve": "vite",
     "watch:typecheck": "tsc --noEmit --watch",
-    "build": "vite build && tsc -p tsconfig.declaration.json",
+    "build": "vite build && tsc --declaration --emitDeclarationOnly --outFile dist/index.d.ts",
     "test": "NODE_ENV=test jest test 'test/*.spec.js'",
     "pages": "npm run build && http-server ./pages/dist",
     "prepublishOnly": "yarn build",
