Add strategy for conditionally adding content to invisibles, and add tests

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "modulePaths": [
       "<rootDir>/src/ts"
     ],
+    "testMatch": ["**/?(*.)+(spec|test).[jt]s?(x)"],
     "preset": "ts-jest",
     "testEnvironment": "jsDom"
   },
