--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "prosemirror-menu": "1.2.1",
     "prosemirror-model": "1.18.1",
     "prosemirror-schema-basic": "1.2.0",
-    "prosemirror-test-builder": "1.1.0",
+    "prosemirror-test-builder": "^1.1.0",
     "prosemirror-view": "1.28.1",
     "react": "17",
     "react-dom": "17",
@@ -57,7 +57,9 @@
     "modulePaths": [
       "<rootDir>/src/ts"
     ],
-    "testMatch": ["**/?(*.)+(spec|test).[jt]s?(x)"],
+    "testMatch": [
+      "**/?(*.)+(spec|test).[jt]s?(x)"
+    ],
     "preset": "ts-jest",
     "testEnvironment": "jsDom"
   },
