--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^2.4.0",
     "http-server": "^0.10.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
@@ -57,6 +58,9 @@
     "modulePaths": [
       "<rootDir>/src/ts"
     ],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    },
     "testMatch": [
       "**/?(*.)+(spec|test).[jt]s?(x)"
     ],
