--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,5 @@ jobs:
         - uses: actions/setup-node@v3
           with:
             node-version: "18.12.1"
-        - run: yarn install
+        - run: yarn install --frozen-lockfile
         - run: yarn test
