--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "devDependencies": {
     "@types/jest": "^26.0.19",
     "@types/prosemirror-dev-tools": "^3.0.2",
-    "@types/prosemirror-state": "^1.2.5",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
+    "@vitejs/plugin-react": "1.3.2",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
@@ -43,10 +43,8 @@
     "prosemirror-history": "1.3.0",
     "prosemirror-keymap": "1.2.0",
     "prosemirror-menu": "1.2.1",
-    "prosemirror-model": "1.18.1",
     "prosemirror-schema-basic": "1.2.0",
     "prosemirror-test-builder": "^1.1.0",
-    "prosemirror-view": "1.28.1",
     "react": "17",
     "react-dom": "17",
     "ts-jest": "^26.4.4",
@@ -67,7 +65,9 @@
     "preset": "ts-jest",
     "testEnvironment": "jsDom"
   },
-  "dependencies": {
-    "@vitejs/plugin-react": "1.3.2"
+  "peerDependencies": {
+    "prosemirror-state": "^1.4.2",
+    "prosemirror-model": "^1.18.2",
+    "prosemirror-view": "^1.29.1"
   }
 }
