--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "watch:serve": "vite",
     "watch:typecheck": "tsc --noEmit --watch",
     "build": "vite build && tsc --declaration --emitDeclarationOnly --outDir dist/",
-    "test": "NODE_ENV=test jest test 'test/*.spec.js'",
+    "test": "jest",
     "pages": "npm run build-pages && http-server ./pages/dist",
     "prepublishOnly": "yarn build",
     "format": "prettier --write './src/**/*.ts'",
@@ -23,7 +23,7 @@
     "publish-pages": "git subtree push --prefix pages/dist origin gh-pages"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.19",
+    "@types/jest": "^29.2.3",
     "@types/prosemirror-dev-tools": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
@@ -34,7 +34,8 @@
     "eslint-plugin-prettier": "^2.4.0",
     "http-server": "^0.10.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
     "prettier": "^2.2.1",
@@ -47,7 +48,7 @@
     "prosemirror-test-builder": "^1.1.0",
     "react": "17",
     "react-dom": "17",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^29.0.3",
     "typescript": "4.8.3",
     "vite": "^2.9.13",
     "vite-tsconfig-paths": "^3.5.0"
@@ -63,7 +64,7 @@
       "**/?(*.)+(spec|test).[jt]s?(x)"
     ],
     "preset": "ts-jest",
-    "testEnvironment": "jsDom"
+    "testEnvironment": "jest-environment-jsdom"
   },
   "peerDependencies": {
     "prosemirror-state": "^1.4.2",
