--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "18.12.1"
+          node-version-file: '.nvmrc'
       - run: yarn install --frozen-lockfile
       - run: yarn test
