--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -13,6 +13,6 @@ jobs:
     with:
       DEBUG: true
       ORG: guardian
-      SKIP_NODE: true
+      SKIP_SBT: true
     secrets:
        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
