--- a/package.json
+++ b/package.json
@@ -26,20 +26,19 @@
     "@changesets/cli": "^2.27.7",
     "@types/jest": "^29.2.3",
     "@types/prosemirror-dev-tools": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
+    "@typescript-eslint/eslint-plugin": "8.3.0",
+    "@typescript-eslint/parser": "8.3.0",
     "@vitejs/plugin-react": "1.3.2",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^2.4.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.2.1",
     "http-server": "^14.1.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "npm-run-all": "^4.1.5",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "postcss": "^8.4.16",
-    "prettier": "^2.2.1",
+    "prettier": "3.3.3",
     "prosemirror-dev-tools": "^3.1.0",
     "prosemirror-example-setup": "1.2.1",
     "prosemirror-history": "1.3.0",
@@ -51,7 +50,7 @@
     "react-dom": "17",
     "ts-jest": "^29.0.3",
     "typescript": "4.8.3",
-    "vite": "^2.9.13",
+    "vite": "5.4.2",
     "vite-tsconfig-paths": "^3.5.0"
   },
   "jest": {
